@@ -1,5 +1,11 @@
 2018-09-13  Mark Wielaard  <mark@klomp.org>
 
+	* run-strip-test-many.sh: New test.
+	* Makefile.am (TESTS): Add run-strip-test-many.sh.
+	(EXTRA_DIST): Likewise.
+
+2018-09-13  Mark Wielaard  <mark@klomp.org>
+
 	* run-typeiter-many.sh: New test.
 	* Makefile.am (TESTS): Add run-typeiter-many.sh.
 	(EXTRA_DIST): Likewise.
